# qwen-tts-cli

./: README.md  benchmark.py  benchmark_quant.py  pyproject.toml
qwen_tts_cli/: __init__.py  _compat.py  cli.py
